--- a/sgh-angular/src/app/app.component.html
+++ b/sgh-angular/src/app/app.component.html
@@ -1,17 +1,17 @@
-<nav class="navbar navbar-expand-lg navbar-dark" *ngIf="isLoggedIn$ | async" >
+<nav class="navbar navbar-expand-lg navbar-dark" *ngIf="isLoggedIn()" >
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" routerLink="">Home <span class="sr-only"></span></a>
+        <a class="nav-link" routerLink="">Home ({{getNome()}})<span class="sr-only"></span></a>
       </li>
     </ul>
     <div>
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" (click)="onLogout()" *ngIf="isLoggedIn$ | async">Logout</a>
+          <a class="nav-link" (click)="onLogout()">Logout</a>
         </li>
       </ul>
     </div>
