--- a/sgh-angular/src/app/login/login.component.html
+++ b/sgh-angular/src/app/login/login.component.html
@@ -4,18 +4,19 @@
       <form [formGroup]="formLogin" (ngSubmit)="onSubmit()">
         <p>Por favor efetue login para continuar</p>
         <mat-form-field class="full-width-input">
-          <input matInput placeholder="Usuário" formControlName="userName" required>
-          <mat-error *ngIf="isFieldInvalid('userName')">
+          <input matInput placeholder="Usuário" formControlName="email" required>
+          <mat-error *ngIf="isFieldInvalid('email')">
             Por favor informe o usuário
           </mat-error>
         </mat-form-field>
         <mat-form-field class="full-width-input">
           <input matInput type="password" placeholder="Senha" formControlName="password" required>
-          <mat-error *ngIf="isFieldInvalid('userName')">
+          <mat-error *ngIf="isFieldInvalid('password')">
             Por favor informe a senha
           </mat-error>
         </mat-form-field>
-        <button mat-raised-button color="primary">Login</button>
+        <button mat-raised-button color="primary" style="margin-right: 10px">Login</button>
+        <button mat-raised-button type="button" color="accent" (click)="cadastrar()">Cadastrar</button>
       </form>
     </mat-card-content>
   </mat-card>
