--- a/sgh-angular/src/app/tipo/tipo-listar/tipo-listar.component.html
+++ b/sgh-angular/src/app/tipo/tipo-listar/tipo-listar.component.html
@@ -9,6 +9,7 @@
   </div>
   <br>
   <table mat-table [dataSource]="dataSource">
+
     <!-- id Column -->
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef style="min-width: 50px"> ID </th>
@@ -27,6 +28,7 @@
       <td mat-cell *matCellDef="let tipo">
         <div>
           <button mat-raised-button color="primary" style="margin-right: 5px" (click)="editar(tipo)">Editar</button>
+          <button mat-raised-button color="warn" (click)="deletarTipo(tipo)">Excluir</button>
         </div>
       </td>
     </ng-container>
