--- a/sgh-angular/src/app/app.component.html
+++ b/sgh-angular/src/app/app.component.html
@@ -29,6 +29,20 @@
         </li>
       </ul>
     </div>
+    <div>
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/listar-departamentos" >Departamentos</a>
+        </li>
+      </ul>
+    </div>
+    <div>
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/listar-cargos" >Cargos</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
 
